tests/golden/parser/accept/struct_literal_vs_block.rua
struct Point { x: i64, y: i64 }

fn choose(enabled: bool) -> Point {
    if enabled {
        Point { x: 1, y: 2 }
    } else {
        Point { x: 3, y: 4 }
    }
}
