tests/golden/parser/reject/missing_comma.rua
struct Point {
    x: i64
    y: i64,
}
